--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h1 {
     text-align: center;
     font-family: 'Unbounded';
     font-weight: 900;
-    font-size: 4vw;
+    font-size: 7vh;
     width: 60%;
 }
 
@@ -70,7 +70,7 @@ span {
     color: #F2EFEA;
     font-family: 'Unbounded';
     font-weight: 5;
-    font-size: 0.9vw;
+    font-size: 1.7vh;
 }
 
 main {
@@ -79,6 +79,7 @@ main {
 
 .video img {
     width: 50%;
+    min-width: 500px;
     display: flex;
     margin: auto;
     margin-bottom: 70px;
@@ -91,18 +92,19 @@ main {
     flex-wrap: wrap;
     width: 70%;
     margin: auto;
-    gap: 30px;
+    gap: 10px;
 }
 
 .philosophie h2 {
     font-family: 'Unbounded';
     font-style: normal;
     font-weight: 900;
+    font-size: 3vh;
 }
 
 .left-column {
     flex: 1 1 auto;
-    min-width: 200px;
+    min-width: 500px;
     max-width: 500px;
 }
 
@@ -110,6 +112,7 @@ h3 {
     font-family: 'Unbounded';
     font-style: normal;
     font-weight: 400;
+    font-size: 3vh;
 
 }
 
@@ -122,5 +125,5 @@ p {
 .philosophie img {
     flex: 1 1 auto;
     width: 40%;    
-    max-width: 700px;
+    max-width: 600px;
 }
